3 - chicken race, the game

--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
   <meta name="author" content="Bradley S">
   <meta name="description" content="description here">
   <meta name="keywords" content="keywords,here">
+ <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
   <link rel="stylesheet" href="style.css" type="text/css">
   </head>
   <body>
   
-    <h1>CHICKEN RACE</h1>
+    <h1>====CHICKEN RACE====</h1>
 
  <canvas id="raceTrack"> </canvas>
    
@@ -25,10 +26,10 @@
  
 <img id='chicken' src="greychicken.jpg">
 
-    <h1>...THE GAME</h1>
-
+    <h1>...THE GAME!</h1>
  </div> 
 
+<button>Insert Coin to RESTART</button>
 
   <script type="text/javascript" src="app.js"></script>
   </body>
